<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            tools:context=".ui.fragments.dialogfragmentgeneric.DialogGenericFragment">

            <ImageView
                android:id="@+id/imgBeer"
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toStartOf="@id/linearOne"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_bottle_beer" />

            <LinearLayout
                android:id="@+id/linearOne"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imgBeer"
                app:layout_constraintTop_toTopOf="parent">

                <!--Title Beer-->
                <TextView
                    android:id="@+id/txtNameBeer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    tools:text="Corona" />

                <!--Yeast Beer-->
                <TextView
                    android:id="@+id/txtYeast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/txt_yeast"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <!--Yeast beer value-->
                <TextView
                    android:id="@+id/txtYeastValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="Wyeast 1056 - American Ale" />

                <!--Content Beer-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_beer"/>

                    <TextView
                        android:id="@+id/txtLiters"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        tools:text="20 Lts" />

                </LinearLayout>

                <!--Ingredent beer-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!--ABV-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_abv"
                            android:textColor="@color/green_aqua"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtAbvValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="4.5%" />

                    </LinearLayout>

                    <!--IBU-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_ibu"
                            android:textColor="@color/green_aqua"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtIbuValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="4.5%" />

                    </LinearLayout>

                    <!--OG-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_og"
                            android:textColor="@color/green_aqua"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtOgValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="4.5%" />

                    </LinearLayout>

                    <!--FG-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_fg"
                            android:textColor="@color/green_aqua"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtFgValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="4.5%" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintVertical_bias="0."
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgBeer">

                <TextView
                    android:id="@+id/txtTagLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="@string/txt_bitter_experience" />

                <TextView
                    android:id="@+id/txtFirstBrewed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    tools:text="First Brewed: 09/2007" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/txt_brewers_tips"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtBrewersTip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    tools:text="The earthy and floral aromas from the hops can be overpowering. Drop a little Cascade in at the end of the boil to lift the profile with a bit of citrus." />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/txt_food_pairing"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtFoodPairing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    tools:text="-Spicy chicken tikka masala" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

<!--                    <LinearLayout-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_weight="1"-->
<!--                        android:orientation="vertical">-->

<!--                        <TextView-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:text="@string/txt_hops"-->
<!--                            android:textColor="@color/black"-->
<!--                            android:textSize="20sp"-->
<!--                            android:textStyle="bold" />-->

<!--                        <TextView-->
<!--                            android:id="@+id/txtHops"-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="match_parent"-->
<!--                            tools:text="Fuggles 25g." />-->

<!--                    </LinearLayout>-->

<!--                    <LinearLayout-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:layout_weight="1"-->
<!--                        android:orientation="vertical">-->

<!--                        <TextView-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:text="@string/txt_malt"-->
<!--                            android:textColor="@color/black"-->
<!--                            android:textSize="20sp"-->
<!--                            android:textStyle="bold" />-->

<!--                        <TextView-->
<!--                            android:id="@+id/txtMalt"-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="match_parent"-->
<!--                            tools:text="Fuggles 25g." />-->

<!--                    </LinearLayout>-->

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>